# CVCalibration

./: CMakeLists.txt
results/: dataset1.yml  dataset1_best10.yml  dataset1_best20.yml  dataset1_best5.yml  dataset2.yml  dataset3.yml  dataset4.yml  dataset4_best10.yml  dataset4_best5.yml
src/: Calibration.cpp  Calibration.h  ComputerVision.cpp  Datasets.cpp  Datasets.h  lab2.cpp
